--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="sunset"></div>
   </div>
   <div class="bird">
-    <img src="https://your-image-url/bird.png" alt="Ave" class="bird-image">
+    <!-- Imagen de ave pública -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Red_sparrow_2.jpg" alt="Ave" class="bird-image">
     <div class="envelope">
       <div class="flap"></div>
       <div class="message">
@@ -23,3 +24,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
