--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 </head>
 <body>
   <div class="background">
-    <div class="peonies"></div>
+    <!-- Fondo colorido como atardecer -->
     <div class="sunset"></div>
   </div>
+  
   <div class="bird">
-    <!-- Imagen de ave pública -->
+    <!-- Imagen de ave pública (puedes cambiar la URL si prefieres otra) -->
     <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Red_sparrow_2.jpg" alt="Ave" class="bird-image">
-    <div class="envelope">
-      <div class="flap"></div>
-      <div class="message">
-        <p>Te quiero y te aprecio mucho como persona.</p>
-      </div>
+  </div>
+  
+  <div class="envelope">
+    <div class="flap"></div>
+    <div class="message">
+      <p>Te quiero y te aprecio mucho como persona.</p>
     </div>
   </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
+
 
